@@ -7,7 +7,7 @@ typedef enum {
     STEM_NOT_ALPHA,     /* not all alpha */
     STEM_TOO_SMALL,     /* word too small to be stemmed */
     STEM_WORD_TOO_BIG,  /* word it too large to stem, would would be too large */
-    STEM_TO_NOTHING,    /* word stemmed to the null string */
+    STEM_TO_NOTHING    /* word stemmed to the null string */
     
 } STEM_RETURNS;
     
